fix(Trade): align predictions to end

--- a/src/components/Trade/Trade.module.scss
+++ b/src/components/Trade/Trade.module.scss
@@ -269,7 +269,7 @@
   }
 
   &NonScroll {
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
   }
 
